--- a/test_GLPE.ipynb
+++ b/test_GLPE.ipynb
@@ -2,14 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import GLPE\n",
-    "import pandas\n",
+    "#https://github.com/ekehoe32/orthrus\n",
+    "import sys\n",
+    "sys.path.append('/home/katrina/a/mankovic/ZOETIS/Fall2021/Orthrus/orthrus')\n",
+    "import orthrus\n",
+    "from orthrus import core\n",
+    "from orthrus.core import dataset\n",
     "import numpy as np\n",
-    "# from matplotlib import pyplot as plt"
+    "# from NetworkDataAnalysis import graph_tools_construction as gt\n",
+    "from matplotlib import pyplot as plt\n",
+    "import pandas\n",
+    "# from orthrus.core.pipeline import *\n",
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "from orthrus.preprocessing.imputation import HalfMinimum\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.decomposition import PCA\n",
+    "from orthrus.core.helper import load_object"
    ]
   },
   {
@@ -106,20 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16615161"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#load data\n",
     "Z40_dataset = dataset.load_dataset('/data4/mankovic/De-Identified_CZ/DeId_TPM_C1_Z40_Z34.ds')\n",
