--- a/Z40_spectral_cuts.ipynb
+++ b/Z40_spectral_cuts.ipynb
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7f1f49a1fe50>"
+       "<matplotlib.lines.Line2D at 0x7fbb0795ec10>"
       ]
      },
      "execution_count": 3,
@@ -403,6 +403,21 @@
     "plt.imshow(sorted_X[:,np.where(labels == c)[0]].T, aspect=.1)\n",
     "plt.title('Cluster '+str(c))\n",
     "# len(np.where(labels == 1)[0]), [frequencies[i] for i in np.where(labels == 1)[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "denovo_pathways = pandas.DataFrame(columns = featureset_randIDs, data = np.zeros((2, len(featureset_randIDs))))\n",
+    "for i in range(2):\n",
+    "    idx = np.where(labels == i)[0]\n",
+    "    for j in idx:\n",
+    "        denovo_pathways.iloc[i][featureset_randIDs[j]] = 1\n",
+    "\n",
+    "denovo_pathways.to_csv('../denovo_pathways/denovo_pathways_Z40_correlation_2pathways.csv')"
    ]
   },
   {
@@ -1324,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1540,7 @@
        "Text(0.5, 1.0, 'Heat Kernel')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1554,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1563,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1586,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1610,7 @@
        "(8, 351)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1675,6 +1690,21 @@
     "print('mean frequency of features in cluster')\n",
     "for l in range(number_clusters):\n",
     "    print('cluster '+str(l)+' is: '+str(np.mean([frequencies[i] for i in np.where(labels == l)[0]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "denovo_pathways = pandas.DataFrame(columns = featureset_randIDs, data = np.zeros((9, len(featureset_randIDs))))\n",
+    "for i in range(9):\n",
+    "    idx = np.where(labels == i)[0]\n",
+    "    for j in idx:\n",
+    "        denovo_pathways.iloc[i][featureset_randIDs[j]] = 1\n",
+    "\n",
+    "denovo_pathways.to_csv('../denovo_pathways/denovo_pathways_Z40_heatkernel_9pathways.csv')"
    ]
   },
   {
