adding null models

--- a/pathway_centrality_simple_GSE.ipynb
+++ b/pathway_centrality_simple_GSE.ipynb
@@ -130,11 +130,12 @@
     "        discriminatory_nodes = list(set(featureset_eids).intersection(set(string_node_eids)))\n",
     "\n",
     "        #calculate pathway scores\n",
-    "        scores = gt.centrality_scores(A, centrality_measure)\n",
+    "        scores = 1+gt.centrality_scores(A, centrality_measure)\n",
     "\n",
     "        #average degree\n",
     "        degrees = np.sum(A,axis = 0)\n",
     "        avg_degree = np.mean(degrees)\n",
+    "        max_degree =  np.max(degrees)\n",
     "\n",
     "        #find the indices of the nodes in the adjacency matrix that correspond to nodes in the featureset\n",
     "        idx = [string_node_eids.index(r) for r in discriminatory_nodes]\n",
@@ -152,6 +153,7 @@
     "                                                    'path norm': pathway_score/len(scores), \n",
     "                                                    'feature path norm': pathway_score/len(node_scores), \n",
     "                                                    'avg degree norm': pathway_score/avg_degree, \n",
+    "                                                    'max degree norm': pathway_score/max_degree, \n",
     "                                                    'feature path count': len(node_scores)}, \n",
     "                                                    ignore_index = True)\n",
     "\n",
