added stop_criteria to cluster_laplace in graph_tools_construction

--- a/pathway_matrix_GSE.ipynb
+++ b/pathway_matrix_GSE.ipynb
@@ -72,14 +72,14 @@
      "text": [
       "/home/katrina/a/mankovic/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (8) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "/tmp/ipykernel_27112/3665169426.py:7: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "/tmp/ipykernel_30586/2755669468.py:7: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
       "  pathway_edges = pandas.read_csv('/data3/darpa/omics_databases/ensembl2pathway/reactome_edges_overlap_fixed_isolated.csv').drop('other_genes', 1).dropna()\n"
      ]
     }
    ],
    "source": [
-    "centrality_measure = 'degree'\n",
-    "undirected = False\n",
+    "centrality_measure = 'page_rank'\n",
+    "undirected = True\n",
     "\n",
     "#load the data\n",
     "\n",
@@ -1790,8 +1790,12 @@
     "    #node eids as strings\n",
     "    string_node_eids = [str(int(node)) for node in n_eids]\n",
     "\n",
-    "    #calculate pathway scores\n",
-    "    scores = gt.centrality_scores(A, centrality_measure)\n",
+    "    if centrality_measure == 'degree':\n",
+    "        degrees = np.sum(A,axis = 0)\n",
+    "        scores = degrees/np.max(degrees)/len(string_node_eids)\n",
+    "    else:\n",
+    "        #calculate pathway scores\n",
+    "        scores = gt.centrality_scores(A, centrality_measure)\n",
     "\n",
     "    #unit vector rows\n",
     "    scores = scores/np.sum(scores)\n",
@@ -1822,9 +1826,9 @@
    "outputs": [],
    "source": [
     "if undirected:\n",
-    "    big_pathway_centralities.to_csv('/data4/mankovic/GSE73072/network_centrality/pathway_matrix/gse73072_undirected_'+centrality_measure+'_all_genes.csv', index = True)\n",
+    "    big_pathway_centralities.to_csv('/data4/mankovic/GSE73072/network_centrality/pathway_matrix/2-4hr/gse73072_undirected_'+centrality_measure+'_all_genes.csv', index = True)\n",
     "else:\n",
-    "    big_pathway_centralities.to_csv('/data4/mankovic/GSE73072/network_centrality/pathway_matrix/gse73072_directed_'+centrality_measure+'_all_genes.csv', index = True)"
+    "    big_pathway_centralities.to_csv('/data4/mankovic/GSE73072/network_centrality/pathway_matrix/2-4hr/gse73072_directed_'+centrality_measure+'_all_genes.csv', index = True)"
    ]
   },
   {
