fixed GLPE according to Eric

--- a/test_GLPE.ipynb
+++ b/test_GLPE.ipynb
@@ -9372,6 +9372,562 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Z42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load Kartikay's gene feature set and store RandIDs for genes\n",
+    "Z42_features = pandas.read_csv('/data4/mankovic/De-Identified_CZ/z42_features.csv', index_col = 0)\n",
+    "featureset_randIDs = [str(r) for r in list(Z42_features.index)]\n",
+    "\n",
+    "#load the entire C1 and Z40 dataset and select the C1 data and metadata\n",
+    "ds = dataset.load_dataset('/data4/mankovic/De-Identified_CZ/DeId_TPM_C1_Z40_Z34_Z42.ds')\n",
+    "sample_ids = (ds.metadata['Project'] == 'Z42') & (ds.metadata['Time'] != -21)\n",
+    "Z42_dataset = ds.slice_dataset(sample_ids = sample_ids)\n",
+    "\n",
+    "#normalize the dataset\n",
+    "transform = make_pipeline(HalfMinimum(missing_values=0), FunctionTransformer(np.log2))\n",
+    "Z42_dataset.normalize(transform, norm_name='HalfMinimum + Log2')\n",
+    "\n",
+    "Z42_data = Z42_dataset.data\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathway_data = pandas.read_csv('/data4/mankovic/De-Identified_CZ/deidentified_fcpw.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#restrict pathway data to to genes that are actually there\n",
+    "pathway_data = pathway_data[['RandID']+list(set(pathway_data.columns).intersection(set(Z42_data.columns)))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "better_pathway_data=pandas.DataFrame(columns = ['feature_id', 'pathway_id'])\n",
+    "gene_names = pathway_data.columns\n",
+    "for row in np.array(pathway_data):\n",
+    "    idx = np.where(row == True)\n",
+    "    # print(row)\n",
+    "    for g in gene_names[idx]:\n",
+    "        better_pathway_data = better_pathway_data.append({'feature_id': int(g), 'pathway_id':row[0]}, ignore_index = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "better_pathway_data = np.array(better_pathway_data)\n",
+    "\n",
+    "node_ids = np.unique(better_pathway_data[:,0])\n",
+    "\n",
+    "translate_dict = { node_ids[i] :i  for i in range(len(node_ids))}\n",
+    "better_pathway_data[:,0] = np.vectorize(translate_dict.get)(better_pathway_data[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CLPE(centrality_measure='degree', heat_kernel_param=2.0,\n",
+       "     incidence_matrix=array([[450, 'p_0'],\n",
+       "       [434, 'p_0'],\n",
+       "       [6443, 'p_0'],\n",
+       "       ...,\n",
+       "       [6859, 'p_999'],\n",
+       "       [3362, 'p_999'],\n",
+       "       [1987, 'p_999']], dtype=object),\n",
+       "     network_type='correlation')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_other_clpe = GLPE.CLPE('degree', \n",
+    "                    'correlation',\n",
+    "                    better_pathway_data, \n",
+    "                    heat_kernel_param = 2)\n",
+    "my_other_clpe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45, 8814)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_dataset = np.array(Z42_data[node_ids.astype(str)])\n",
+    "small_dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CLPE(centrality_measure='degree', heat_kernel_param=2.0,\n",
+       "     incidence_matrix=array([[450, 'p_0'],\n",
+       "       [434, 'p_0'],\n",
+       "       [6443, 'p_0'],\n",
+       "       ...,\n",
+       "       [6859, 'p_999'],\n",
+       "       [3362, 'p_999'],\n",
+       "       [1987, 'p_999']], dtype=object),\n",
+       "     network_type='correlation')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_other_clpe.fit(small_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45, 1979)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_other_clpe.transform(small_dataset).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RandID</th>\n",
+       "      <th>9348</th>\n",
+       "      <th>13898</th>\n",
+       "      <th>21778</th>\n",
+       "      <th>14561</th>\n",
+       "      <th>34398</th>\n",
+       "      <th>4590</th>\n",
+       "      <th>24828</th>\n",
+       "      <th>34498</th>\n",
+       "      <th>14528</th>\n",
+       "      <th>...</th>\n",
+       "      <th>10857</th>\n",
+       "      <th>35391</th>\n",
+       "      <th>20405</th>\n",
+       "      <th>12657</th>\n",
+       "      <th>14947</th>\n",
+       "      <th>34930</th>\n",
+       "      <th>33480</th>\n",
+       "      <th>7754</th>\n",
+       "      <th>6660</th>\n",
+       "      <th>390</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>p_0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>p_1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>p_10</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>p_1000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>p_1001</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1974</th>\n",
+       "      <td>p_994</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1975</th>\n",
+       "      <td>p_995</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1976</th>\n",
+       "      <td>p_996</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1977</th>\n",
+       "      <td>p_997</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1978</th>\n",
+       "      <td>p_999</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1979 rows × 28258 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      RandID   9348  13898  21778  14561  34398   4590  24828  34498  14528  \\\n",
+       "0        p_0  False  False  False  False  False  False  False  False  False   \n",
+       "1        p_1  False  False  False  False  False  False  False  False  False   \n",
+       "2       p_10  False  False  False  False  False  False  False  False  False   \n",
+       "3     p_1000  False  False  False  False  False  False  False  False   True   \n",
+       "4     p_1001  False  False  False  False  False  False  False  False  False   \n",
+       "...      ...    ...    ...    ...    ...    ...    ...    ...    ...    ...   \n",
+       "1974   p_994  False  False  False  False  False  False  False  False  False   \n",
+       "1975   p_995  False  False  False  False  False  False  False  False  False   \n",
+       "1976   p_996  False  False  False  False  False  False  False  False  False   \n",
+       "1977   p_997  False  False  False  False  False  False  False  False  False   \n",
+       "1978   p_999  False  False  False  False  False  False  False  False  False   \n",
+       "\n",
+       "      ...  10857  35391  20405  12657  14947  34930  33480   7754   6660  \\\n",
+       "0     ...  False  False  False  False  False  False  False  False  False   \n",
+       "1     ...  False  False  False  False  False  False  False  False  False   \n",
+       "2     ...  False  False  False  False  False  False  False  False  False   \n",
+       "3     ...  False  False  False  False  False  False  False  False  False   \n",
+       "4     ...  False  False  False  False  False  False  False  False  False   \n",
+       "...   ...    ...    ...    ...    ...    ...    ...    ...    ...    ...   \n",
+       "1974  ...  False  False  False  False  False  False  False  False  False   \n",
+       "1975  ...  False  False  False  False  False  False  False  False  False   \n",
+       "1976  ...  False  False  False  False  False  False  False  False  False   \n",
+       "1977  ...  False  False  False  False  False  False  False  False  False   \n",
+       "1978  ...  False  False  False  False  False  False  False  False  False   \n",
+       "\n",
+       "        390  \n",
+       "0     False  \n",
+       "1     False  \n",
+       "2     False  \n",
+       "3     False  \n",
+       "4     False  \n",
+       "...     ...  \n",
+       "1974  False  \n",
+       "1975  False  \n",
+       "1976  False  \n",
+       "1977  False  \n",
+       "1978  False  \n",
+       "\n",
+       "[1979 rows x 28258 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
